# pycounts_nb

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py
tests/: test_pycounts_nb.py
