[tool.poetry]
name = "pycounts_nb"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Bnonkovic"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.7.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
